
[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "dbcache"
version = "0.2.15"
description = "Incremental DB-to-disk cache (CSV/Parquet) with gap-filling, schema guard, Postgres/MySQL adapters, timeout & cache fallback."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "dbcache authors"}]
dependencies = [
  "pandas>=2.0.0",
  "pyarrow>=13.0.0",
  "psycopg[binary]>=3.1.0; python_version>='3.8'",
  "psycopg2-binary>=2.9.0",
  "pymysql>=1.1.0",
]

[project.optional-dependencies]
mysql = ["mysqlclient>=2.2"]
postgres = ["psycopg2-binary>=2.9.0", "psycopg>=3.1.0; python_version>='3.8'"]
parquet = ["pyarrow>=13.0.0"]
all = ["pyarrow>=13.0.0", "psycopg2-binary>=2.9.0", "psycopg>=3.1.0; python_version>='3.8'", "pymysql>=1.1.0", "mysqlclient>=2.2"]

[tool.hatch.build.targets.wheel]
packages = ["src/dbcache"]

[tool.hatch.build.targets.sdist]
include = ["src/**", "README.md", "pyproject.toml", "tests/**"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
